--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="robots" content="index, follow">
 
   <!-- Icons -->
-  <link rel="icon" href="file:///home/schizo/personal/pictures/thaaszagren16x16.gif" type="image/gif" sizes="16x16">
+  <link rel="icon" href="/assets/thaaszagren16x16.gif" type="image/gif" sizes="16x16">
 
 </head>
 <body style="font-family: sans-serif;">
@@ -19,10 +19,10 @@
     <h1>Thaaszagren</h1>
     <img
      srcset="
-     file:///home/schizo/personal/pictures/thaaszagren2x.jpg 2x,
-     file:///home/schizo/personal/pictures/thaaszagren.jpg 1x,
+     /assets/thaaszagren2x.jpg 2x,
+     /assets/thaaszagren.jpg 1x,
      "
-     src="file:///home/schizo/personal/pictures/thaaszagren2x.jpg"
+     src="/assets/thaaszagren2x.jpg"
      alt="thaaszagren logo"
     >
     <p>This is a digital links archive for Thaaszagren vk-based group. You can view it at: <a href="https://vk.com/thaaszagren" target="_blank">Thaaszagren</a>.</p>
