--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <p>Find me elsewhere on the web: <a href="https://vk.com/aerindyl_haagensed" target="_blank">VK</a> or e-mail me at &#x2937;&#xFE0E; <a href="mailto:thaaszagren@protonmail.com">thaaszagren@protonmail.com</a>.</p>
 
     <A name="vk"><h3>VK_posts</h3></A>
-    <p>Music
+    <a href=#music>music</a>, <a href=#tech>tech</a>, <a href=#cinema>cinema</a>, <a href=#photo>photo</a>, <a href=#other>other</a> <sup>↗︎ Links</sup>
+
+    <A name="music"><p>Music</p></A>
         <ol>
         <li><a href="https://vk.com/thaaszagren?w=wall-156295460_299">Castelnuovo-Tedesco -- Trio in Sol Quintetto in Fa</a></li>
         <li><a href="https://vk.com/thaaszagren?w=wall-156295460_297">Amina Alaoui & Ahmed Piro w Orchestra -- Music Arabo-Andalouse Du Maroc 1995</a></li>
@@ -169,9 +171,8 @@
         <li><a href="https://vk.com/thaaszagren?w=wall-156295460_3">Peter Apfelbaum - Luminous Charms</a></li>
         <li><a href="https://vk.com/thaaszagren?w=wall-156295460_2">Anthony Braxton - Echo Echo Mirror House</a></li>
         </ol>
-    </p>
 
-    <p>Техника
+    <A name="tech"><p>Tech</p></A>
         <ol>
         <li><a href="https://vk.com/thaaszargen?w=wall-156295460_224">Plex VR</a></li>
         <li><a href="https://vk.com/thaaszargen?w=wall-156295460_223">Leapmotion Matsuda from Hyperreality</a></li>
@@ -194,9 +195,8 @@
         <li><a href="https://vk.com/thaaszargen?w=wall-156295460_27">Ipad Pro + Pencil vids</a></li>
         <li><a href="https://vk.com/thaaszargen?w=wall-156295460_20">Tech post первый/ Keyboard Logitech + Vive</a></li>
         </ol>
-    </p>
 
-    <p>Кино
+    <A name="cinema"><p>Cinema</p></A>
         <ol>
         <li><a href="https://vk.com/thaaszargen?w=wall-156295460_298">Sidni Lumet Kak Delaetsya Kino</a></li>
         <li><a href="https://vk.com/thaaszargen?w=wall-156295460_293">Nastroishik Kiri Muratovoi v KARO Oktyabr</a></li>
@@ -210,16 +210,15 @@
         </ol>
     </p>
 
-    <p>Фотография
+    <A name="photo"><p>Photo</p></A>
         <ol>
         <li><a href="https://vk.com/thaaszargen?w=wall-156295460_204">9 тысяч архивных фотографий Ближнего Востока. Akkasah</a></li>
         <li><a href="https://vk.com/thaaszargen?w=wall-156295460_196">Попов. Якутия. 1920-30е</a></li>
         <li><a href="https://vk.com/thaaszargen?w=wall-156295460_170">Саамы - скольты 1920-1930е</a></li>
         <li><a href="https://vk.com/thaaszargen?w=wall-156295460_158">Кавказ и Закавказье в работах Дмитрия Ивановича Ермакова / Часть 1</a></li>
         </ol>
-    </p>
 
-    <p>Прочее
+    <A name=""><p>Other</p></A>
         <ol>
         <li><a href="https://vk.com/thaaszargen?w=wall-156295460_300">Chaya Chernowin Moscow meetup</a></li>
         <li><a href="https://vk.com/thaaszargen?w=wall-156295460_292">Sdelal tg kanal</a></li>
@@ -241,12 +240,11 @@
         <li><a href="https://vk.com/thaaszargen?w=wall-156295460_54">Лифшиц о главном герое литературы</a></li>
         <li><a href="https://vk.com/thaaszargen?w=wall-156295460_17">есть куда двигаться</a></li>
         </ol>
-    </p>
 
     <A name="tg"><h3>Telegram</h3></A>
     <p>Хорошие каналы телеги. Без сортировки или топа.</p>
 
-    <p>Драма
+    <A name="theatre"><p>Драма</p></A>
         <ol>
         <li><a href="https://t.me/bellacatena">Как я был русалкой</a></li>
         <li><a href="https://t.me/bolshoitheatre">Большой театр</a></li>
@@ -261,9 +259,8 @@
         <li><a href="https://t.me/clausum">Он поёт по утрам в клозете</a></li>
         <li><a href="https://t.me/inner_emigrant">INNER EMIGRANT</a></li>
         </ol>
-    </p>
 
-        <p>Путешествия
+        <A name="jour"><p>Путешествия</p></A>
             <ol>
             <li><a href="https://t.me/magic_the_japan">Magic the Japan</a></li>
             <li><a href="https://t.me/mikutsu">Примерный гражданин Микуцу</a></li>
@@ -275,9 +272,8 @@
             <li><a href="https://t.me/za_stenoy" >За стеной        </a></li>
             <li><a href="https://t.me/poleteeli" >Полетели         </a></li>
             </ol>
-        </p>
 
-        <p>Политика / Экономика
+        <A name="pol"><p>Политика / Экономика</p></A>
             <ol>
             <li><a href="https://t.me/seryikardinal  ">Устинов троллит   </a></li>
             <li><a href="https://t.me/russica2       ">НЕЗЫГАРЬ          </a></li>
@@ -288,9 +284,8 @@
             <li><a href="https://t.me/rationalnumbers">Рациональные числа</a></li>
             <li><a href="https://t.me/fintech_ru">finTech           </a></li>
             </ol>
-        </p>
 
-        <p>Новости
+        <A name="news"><p>Новости</p></A>
             <ol>
             <li><a href="https://t.me/Bell_daily">The Bell daily</a></li>
             <li><a href="https://t.me/meduzaevening">Вечерняя медуза</a></li>
@@ -298,9 +293,8 @@
             <li><a href="https://t.me/rusbase      ">Rusbase Молния </a></li>
             <li><a href="https://t.me/roskomsvoboda">RosKomSvoboda  </a></li>
             </ol>
-        </p>
 
-        <p>Техника / IT / Наука
+        <A name="geek"><p>Техника / IT / Наука</p></A>
             <ol>
             <li><a href="https://t.me/tirsky">astronomy</a></li>
             <li><a href="https://t.me/anosognosiaandcomorbiddiseases">анозогнозия и коморбидные рассройства</a></li>
@@ -326,9 +320,8 @@
             <li><a href="https://t.me/mediadepression ">медиа и депрессия             </a></li>
             <li><a href="https://t.me/postrenaissance">Постренессанс                 </a> </li>
             </ol>
-        </p>
 
-        <p>Музыка
+        <A name="music_tg"><p>Музыка</p></A>
             <ol>
             <li><a href="https://t.me/vnemlu">внемлю:</a></li>
             <li><a href="https://t.me/archive_classmus">Музыкальная гостиная</a></li>
@@ -340,18 +333,16 @@
             <li><a href="https://t.me/shlsi    ">ШЛСИ                      </a></li>
             <li><a href="https://t.me/ru12edit ">История электронной музыки</a></li>
             </ol>
-        </p>
 
-        <p>Здоровье
+        <A name="health"><p>Здоровье</p></A>
             <ol>
             <li><a href="https://t.me/DrButriy">Заметки детского врача</a></li>
             <li><a href="https://t.me/namochimanturu">Намочи манту </a></li>
             <li><a href="https://t.me/runforhealth">Бегать просто</a></li>
             <li><a href="https://t.me/shbmnk ">ШБмнк        </a></li>
             </ol>
-        </p>
 
-        <p>Образование
+        <A name="edu"><p>Образование</p></A>
             <ol>
             <li><a href="https://t.me/freakbook    ">Freakbook              </a></li>
             <li><a href="https://t.me/EduBlog      ">Современное образование</a></li>
@@ -361,26 +352,23 @@
             <li><a href="https://t.me/media_enjoy  ">EnglishOK Media        </a></li>
             <li><a href="https://t.me/english_enjoy">EnglishOK              </a></li>
             </ol>
-        </p>
 
-        <p>Зоология / Орнитология
+        <A name="zoo"><p>Зоология / Орнитология</p></A>
             <ol>
             <li><a href="https://t.me/thebatrachospermummagazine">The Batrachospermum Magazine</a></li>
             <li><a href="https://t.me/natural_selection_channel">Бар Чокнутый натуралист</a></li>
             <li><a href="https://t.me/wearebirders             ">Северный глупыш        </a></li>
             </ol>
-        </p>
 
-        <p>Мемы
+        <A name="meme"><p>Мемы</p></A>
             <ol>
             <li><a href="https://t.me/datstuff         ">Литий и стенания      </a></li>
             <li><a href="https://t.me/scrolllock       ">Scroll...             </a></li>
             <li><a href="https://t.me/dildoshnaya      ">Дилдошная strikes back</a></li>
             <li><a href="https://t.me/HypomaniaAndSpeed">Амфетамин и гипомания </a></li>
             </ol>
-        </p>
 
-        <p>Прочее
+        <A name="other_tg"><p>Прочее</p></A>
             <ol>
             <li><a href="https://t.me/subumbras">Sub umbras</a></li>
             <li><a href="https://t.me/ASSS316">ASSS</a></li>
@@ -391,7 +379,6 @@
             <li><a href="https://t.me/HaikuDaily ">Haiku Daily    </a></li>
             <li><a href="https://t.me/durov">Durov's Channel</a></li>
             </ol>
-        </p>
 
     <A name="movies"><h3>Movies</h3></A>
     <p>Рекомендую фильмы. Без топа и сортировки.</p>
