--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
      alt="thaaszagren logo"
     >
     <p>This is a digital links archive for Thaaszagren vk-based group. You can view it at: <a href="https://vk.com/thaaszagren" target="_blank">Thaaszagren</a>.</p>
-    <p>Feel free to navigate around with these sections: <a href="#vk" target="_blank">vk</a>, <a href="#tg" target="_blank">tg_channels</a>, <a href="#movies" target="_blank">movies</a>.</p>
+    <p>Feel free to navigate around with these sections: <a href="#vk">vk</a>, <a href="#tg">tg_channels</a>, <a href="#movies">movies</a>.</p>
     <p>Find me elsewhere on the web: <a href="https://vk.com/aerindyl_haagensed" target="_blank">VK</a> or e-mail me at &#x2937;&#xFE0E; <a href="mailto:thaaszagren@protonmail.com">thaaszagren@protonmail.com</a>.</p>
 
     <A name="vk"><h3>VK_posts</h3></A>
-    <a href=#music>music</a>, <a href=#tech>tech</a>, <a href=#cinema>cinema</a>, <a href=#photo>photo</a>, <a href=#other>other</a> <sup>↗︎ Links</sup>
+    <small>
+        <a href=#music>music</a>, <a href=#tech>tech</a>, <a href=#cinema>cinema</a>, <a href=#photo>photo</a>, <a href=#other>other</a> <sup>↗︎ Links</sup>
+    </small>
 
     <A name="music"><p>Music</p></A>
         <ol>
