--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
     <p>Feel free to navigate around with these sections: <a href="#vk">vk</a>, <a href="#tg">tg_channels</a>, <a href="#movies">movies</a>.</p>
     <p>Find me elsewhere on the web: <a href="https://vk.com/aerindyl_haagensed" target="_blank">VK</a> or e-mail me at &#x2937;&#xFE0E; <a href="mailto:thaaszagren@protonmail.com">thaaszagren@protonmail.com</a>.</p>
 
+    <p>test <a href="/movies.html">кино</a></p>
+
     <A name="vk"><h3>VK_posts</h3></A>
+    <nav>
     <small>
         <a href=#music>music</a>, <a href=#tech>tech</a>, <a href=#cinema>cinema</a>, <a href=#photo>photo</a>, <a href=#other>other</a> <sup>↗︎ Links</sup>
     </small>
+    </nav>
 
     <A name="music"><p>Music</p></A>
         <ol>
