--- a/tg.html
+++ b/tg.html
@@ -26,11 +26,11 @@
      alt="thaaszagren logo"
     >
     <p>This is a digital links archive for Thaaszagren vk-based group. You can view it at: <a href="https://vk.com/thaaszagren" target="_blank">Thaaszagren</a>.</p>
-    <p>Feel free to navigate around with these sections: <a href="#vk">vk</a>, <a href="#tg">tg_channels</a>, <a href="#movies">movies</a>.</p>
+    <p>Feel free to navigate around with these sections: <a href="/index.html">home</a>, <a href="/posts.html">vk_posts</a>, <a href="/tg.html">tg_channels</a>, <a href="/movies.html">movies</a>.</p>
     <p>Find me elsewhere on the web: <a href="https://vk.com/aerindyl_haagensed" target="_blank">VK</a> or e-mail me at &#x2937;&#xFE0E; <a href="mailto:thaaszagren@protonmail.com">thaaszagren@protonmail.com</a>.</p>
 
     <A name="tg"><h3>Telegram</h3></A>
-    <p>Хорошие каналы телеги. Без сортировки или топа.</p>
+    <p>Noteworthy `telega` channels. No ranking or sorting.</p>
 
     <A name="theatre"><p>Драма</p></A>
         <ol>
