earth icon removed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body style="font-family: sans-serif;">
   <main>
 
-    <h1>Thaaszagren 🌎</h1>
+    <h1>Thaaszagren</h1>
     <img
      srcset="
      /assets/thaaszagren2x.jpg 2x,
