--- a/movies.html
+++ b/movies.html
@@ -13,7 +13,7 @@
   <link rel="icon" href="/assets/thaaszagren16x16.gif" type="image/gif" sizes="16x16">
 
 </head>
-<body style="font-family: sans-serif;">
+<body style="font-family: courier;">
   <main>
 
     <h1>Thaaszagren</h1>
@@ -26,8 +26,8 @@
      alt="thaaszagren logo"
     >
     <p>This is a digital links archive for Thaaszagren vk-based group. You can view it at: <a href="https://vk.com/thaaszagren" target="_blank">Thaaszagren</a>.</p>
-    <p>Feel free to navigate around with these sections: <a href="/index.html">home</a>, <a href="/posts.html">vk_posts</a>, <a href="/tg.html">tg_channels</a>, <a href="/movies.html">movies</a>.</p>
     <p>Find me elsewhere on the web: <a href="https://vk.com/aerindyl_haagensed" target="_blank">VK</a> or e-mail me at &#x2937;&#xFE0E; <a href="mailto:thaaszagren@protonmail.com">thaaszagren@protonmail.com</a>.</p>
+    <p>Feel free to navigate around with these sections: <a href="/index.html">home</a>, <a href="/posts.html">vk_posts</a>, <a href="/tg.html">tg_channels</a>, <a href="/movies.html">movies</a>.</p>
 
     <A name="movies"><h3>Movies</h3></A>
     <p>Recommended movies. No ranking or sorting.</p>
