--- a/posts.html
+++ b/posts.html
@@ -26,8 +26,8 @@
      alt="thaaszagren logo"
     >
     <p>This is a digital links archive for Thaaszagren vk-based group. You can view it at: <a href="https://vk.com/thaaszagren" target="_blank">Thaaszagren</a>.</p>
-    <p>Feel free to navigate around with these sections: <a href="/index.html">home</a>, <a href="/posts.html">vk_posts</a>, <a href="/tg.html">tg_channels</a>, <a href="/movies.html">movies</a>.</p>
     <p>Find me elsewhere on the web: <a href="https://vk.com/aerindyl_haagensed" target="_blank">VK</a> or e-mail me at &#x2937;&#xFE0E; <a href="mailto:thaaszagren@protonmail.com">thaaszagren@protonmail.com</a>.</p>
+    <p>Feel free to navigate around with these sections: <a href="/index.html">home</a>, <a href="/posts.html">vk_posts</a>, <a href="/tg.html">tg_channels</a>, <a href="/movies.html">movies</a>.</p>
 
     <A name="vk"><h3>VK Posts</h3></A>
     <small>
@@ -220,7 +220,7 @@
         <li><a href="https://vk.com/thaaszargen?w=wall-156295460_158">Кавказ и Закавказье в работах Дмитрия Ивановича Ермакова / Часть 1</a></li>
         </ol>
 
-    <A name=""><p>Other</p></A>
+    <A name="other"><p>Other</p></A>
         <ol>
         <li><a href="https://vk.com/thaaszargen?w=wall-156295460_300">Chaya Chernowin Moscow meetup</a></li>
         <li><a href="https://vk.com/thaaszargen?w=wall-156295460_292">Sdelal tg kanal</a></li>
