--- a/posts.html
+++ b/posts.html
@@ -13,7 +13,7 @@
   <link rel="icon" href="/assets/thaaszagren16x16.gif" type="image/gif" sizes="16x16">
 
 </head>
-<body style="font-family: sans-serif;">
+<body style="font-family: courier;">
   <main>
 
     <h1>Thaaszagren</h1>
