new logo & minor changes index

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      alt="thaaszagren logo"
     >
     <p>This is a digital links archive for Thaaszagren group. You can view it at: <a href="https://vk.com/thaaszagren" target="_blank">Thaaszagren</a>.</p>
-    <p>Find me elsewhere on the web: <a href="https://vk.com/aerindyl_haagensed" target="_blank">vk</a> or e-mail me at &#x2937;&#xFE0E; <a href="mailto:thaaszagren@protonmail.com">thaaszagren@protonmail.com</a>.</p>
+    <p>Find me on the web: <a href="https://vk.com/aerindyl_haagensed" target="_blank">vk</a> or e-mail me at &#x2937;&#xFE0E; <a href="mailto:thaaszagren@protonmail.com">thaaszagren@protonmail.com</a>.</p>
 
     <h3>Navigation</h3>
 
@@ -43,14 +43,14 @@
         <p>
           <a href="/tg.html">Telegram</a> <sup>&#x2197;&#xFE0E; List</sup>
           <br>
-          Some nice channels.
+          Some noteworthy channels.
         </p>
       </li>
       <li>
         <p>
           <a href="/movies.html">Movies</a> <sup>&#x2197;&#xFE0E; Table</sup>
           <br>
-          I recommend movies
+          I recommend movies.
           <br>
           <small>Good ones.</small>
         </p>
@@ -67,6 +67,15 @@
   <footer>
     <p>Be nice &copy; 2020 ツ</p>
   </footer>
+
+    <img
+     srcset="
+     /assets/vk_logo_big_2x.png 2x,
+     /assets/vk_logo_big_3x.png 1x,
+     "
+     src="/assets/vk_logo_big.jpg"
+     alt="vk logo"
+    >
 
 </body>
 </html>
