new logo & minor changes index

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
      /assets/vk_logo_big_2x.png 2x,
      /assets/vk_logo_big_3x.png 1x,
      "
-     src="/assets/vk_logo_big.jpg"
+     src="/assets/vk_logo_big.png"
      alt="vk logo"
     >
 
