--- a/index.html
+++ b/index.html
@@ -68,11 +68,21 @@
     <p>Be nice &copy; 2020 ツ</p>
   </footer>
 
+
     <img
      srcset="
-     /assets/vk_logo_big_2x.png 2x,
-     /assets/vk_logo_big_3x.png 1x,
+     /assets/thaaszagren2x.jpg 2x,
+     /assets/thaaszagren.jpg 1x,
      "
+     src="/assets/thaaszagren2x.jpg"
+     alt="thaaszagren logo"
+    >
+    <img
+     srcset="
+     /assets/vk_logo_big_x2.png 2x,
+     /assets/vk_logo_big_x3.png 1x,
+     "
+
      src="/assets/vk_logo_big.png"
      alt="vk logo"
     >
